samples/_failures_safe/1761634584_edfa07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f8b500a.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_2f8b500a.c:187:57: error: expected ‘)’ at end of input
  187 |     printf("Dijkstra distances from vertex %d:\n", start
      |           ~                                             ^
      |                                                         )
./samples/SAFE/__tmp_2f8b500a.c:187:5: error: expected declaration or statement at end of input
  187 |     printf("Dijkstra distances from vertex %d:\n", start
      |     ^~~~~~
